[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/mus/06.-title.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/ui/title.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/sun.png" type="Texture" id=3]
[ext_resource path="res://object/mazes/maze_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/scroll_bckg.gd" type="Script" id=5]
[ext_resource path="res://scenes/main.gd" type="Script" id=6]
[ext_resource path="res://assets/mus/bckgndMus.gd" type="Script" id=7]
[ext_resource path="res://object/mazes/map_1.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/player/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/backgrounds/background.png" type="Texture" id=10]
[ext_resource path="res://assets/mus/07.-elpepeetesech.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 41 )

[sub_resource type="Animation" id=2]
resource_name = "heatup"
length = 38.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 38.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.2, 0, 0, 1 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 224, 30, 0, 30, 0, 0, 224, 0 )

[sub_resource type="TileSet" id=4]
0/name = "title.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 224, 30 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 2112.0 ],
"_edit_vertical_guides_": [  ]
}

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 5 )

[node name="sun" type="Area2D" parent="camera"]
position = Vector2( 240, 0 )
z_index = 100
collision_layer = 4

[node name="sun_texture" type="TextureRect" parent="camera/sun"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 41.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sun_hitbox" type="CollisionShape2D" parent="camera/sun"]
light_mask = 2
shape = SubResource( 1 )

[node name="border" type="TileMap" parent="camera"]
position = Vector2( 0, 540 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2228225, 7, 0, -2293760, 7, 0, -2293759, 7, 0, -2293758, 7, 0, -2293757, 7, 0, -2293756, 7, 0, -2293755, 7, 0, -2293754, 7, 0, -2293753, 7, 0, -2293752, 7, 0, -2293751, 7, 0, -2293750, 7, 0, -2293749, 7, 0, -2293748, 7, 0, -2293747, 7, 0, -2293746, 7, 0, -2293745, 7, 0, -2293744, 7, 0, -2293743, 7, 0, -2293742, 7, 0, -2293741, 7, 0, -2293740, 7, 0, -2293739, 7, 0, -2293738, 7, 0, -2293737, 7, 0, -2293736, 7, 0, -2293735, 7, 0, -2293734, 7, 0, -2293733, 7, 0, -2293732, 7, 0, -2293731, 7, 0, -2293730, 7, 0, -2162689, 7, 0, -2228194, 7, 0, -2097153, 7, 0, -2162658, 7, 0, -2031617, 7, 0, -2097122, 7, 0, -1966081, 7, 0, -2031586, 7, 0, -1900545, 7, 0, -1966050, 7, 0, -1835009, 7, 0, -1900514, 7, 0, -1769473, 7, 0, -1834978, 7, 0, -1703937, 7, 0, -1769442, 7, 0, -1638401, 7, 0, -1703906, 7, 0, -1572865, 7, 0, -1638370, 7, 0, -1507329, 7, 0, -1572834, 7, 0, -1441793, 7, 0, -1507298, 7, 0, -1376257, 7, 0, -1441762, 7, 0, -1310721, 7, 0, -1376226, 7, 0, -1245185, 7, 0, -1310690, 7, 0, -1179649, 7, 0, -1245154, 7, 0, -1114113, 7, 0, -1179618, 7, 0, -1048577, 7, 0, -1114082, 7, 0, -983041, 7, 0, -1048546, 7, 0, -917505, 7, 0, -983010, 7, 0, -851969, 7, 0, -917474, 7, 0, -786433, 7, 0, -851938, 7, 0, -720897, 7, 0, -786402, 7, 0, -655361, 7, 0, -720896, 7, 0, -720895, 7, 0, -720894, 7, 0, -720893, 7, 0, -720892, 7, 0, -720891, 7, 0, -720890, 7, 0, -720889, 7, 0, -720888, 7, 0, -720887, 7, 0, -720886, 7, 0, -720885, 7, 0, -720884, 7, 0, -720883, 7, 0, -720882, 7, 0, -720881, 7, 0, -720880, 7, 0, -720879, 7, 0, -720878, 7, 0, -720877, 7, 0, -720876, 7, 0, -720875, 7, 0, -720874, 7, 0, -720873, 7, 0, -720872, 7, 0, -720871, 7, 0, -720870, 7, 0, -720869, 7, 0, -720868, 7, 0, -720867, 7, 0, -720866, 7, 0 )

[node name="background_texture" type="TextureRect" parent="camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 974.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="camera/background_texture"]
anims/heatup = SubResource( 2 )

[node name="title" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262145, 0, 0 )

[node name="maze_generation" type="Node" parent="."]

[node name="maze_gen" parent="maze_generation" instance=ExtResource( 8 )]

[node name="bckgndMus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
script = ExtResource( 7 )

[node name="elpepe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 239.846, 58.3945 )
speed = Vector2( 120, 180 )
gravity = 800.0

[connection signal="area_entered" from="camera/sun" to="." method="touched_sun"]
[connection signal="finished" from="bckgndMus" to="bckgndMus" method="finished_bgm"]
[connection signal="finished" from="elpepe" to="bckgndMus" method="_on_elpepe_finished"]
